monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0812/A0812a.java
public void meth1(int i, String... i) {}
